# observer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
src/: observer.cpp  observer.hpp  observer_c.cpp  observer_c.h
tests/: multi_topic_test.cpp  test.cpp  thread_safety_test.cpp
